fixed FileReaderTest and FileWriterTest